--- a/functions/.env
+++ b/functions/.env
@@ -2,5 +2,5 @@ SMTP_HOST=smtp.mandrillapp.com
 SMTP_PORT=587
 SMTP_USER=wifirst
 SMTP_PASS=md-kEW5AHiv9L5b1Kvo0u7_nQ
-SMTP_FROM=noreply@wifirst.fr
+SMTP_FROM=noreply@wifirst.net
 SITE_URL=https://wifirst-tech-blog.web.app
