--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,10 @@
         "source": "/**",
         "headers": [
           {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          },
+          {
             "key": "X-Content-Type-Options",
             "value": "nosniff"
           },
@@ -55,7 +59,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: https://firebasestorage.googleapis.com https://*.firebasestorage.app https://*.googleusercontent.com https://ui-avatars.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://firebasestorage.googleapis.com https://firestore.googleapis.com https://*.firebaseio.com https://apis.google.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.cloudfunctions.net https://*.run.app; frame-src 'self' https://*.firebaseapp.com https://accounts.google.com;"
+            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: https://firebasestorage.googleapis.com https://*.firebasestorage.app https://*.googleusercontent.com https://ui-avatars.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://www.google-analytics.com https://firebasestorage.googleapis.com https://firestore.googleapis.com wss://*.firebaseio.com https://*.firebaseio.com https://apis.google.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://*.cloudfunctions.net https://*.run.app https://content-firestore.googleapis.com; frame-src 'self' https://*.firebaseapp.com https://accounts.google.com;"
           }
         ]
       }
