feat: generate-diagram v2, newsletter trigger, gitignore content drafts
- Rewrite generate-diagram.ts: auto-sizing, font shrink, cloud shapes, perpendicular labels, dashed style
- Add trigger-newsletter.ts script
- Update publish-article.ts for agentic-sre article
- Update make-images-public.ts
- Update Cloud Functions (onArticleCreated/Updated newsletter)
- Update homepage (page.tsx)
- Gitignore content/ and diagrams/ (published via Firestore, not git)

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ service-account.json
 # cloud functions
 functions/node_modules/
 functions/lib/
+
+# content drafts & generated assets (published via Firestore, not git)
+content/
+diagrams/
